--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <a href="#"><img src="facebook.png" alt="icon"></a>
                         <a href="#"><img src="twitter.png" alt="icon"></a>
                         <a href="#"><img src="pintrest1.svg" alt="icon"></a>
-                        <a href="#"><img src="insta.webp" alt="icon"></a>
+                        <a href="https://www.instagram.com/rp_yashpal_singh/?next=%2F&hl=en"><img src="insta.webp" alt="icon"></a>
                     </div>
                 </div>
             </div>
@@ -401,7 +401,7 @@
                 <a href=""><img src="twitter.png" alt=""></a>
                 <a href=""><img src="web.png" alt=""></a>
                 <a href=""><img src="pintrest1.svg" alt=""></a>
-                <a href=""><img src="insta.webp" alt=""></a>
+                <a href="https://www.instagram.com/rp_yashpal_singh/?next=%2F&hl=en"><img src="insta.webp" alt=""></a>
             </div>
             <div class="copyright">
                 Copyright 2024 @ Name Yash_Raj. All Right Reserved.
