--- a/index.html
+++ b/index.html
@@ -372,18 +372,18 @@
 
                 </div>
 
-                <form action="">
+               <form action="/post" method="POST">
                     <div class="input-wrap">
-                        <input type="text" placeholder="Your Name *">
-                        <input type="email" placeholder="Your Email *">
+                        <input type="text" placeholder="Your Name *" name="name">
+                        <input type="email" placeholder="Your Email *" name="email">
                     </div>
                     <div class="input-wrap-2">
-                        <input type="text" placeholder="Your Subject">
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message..."></textarea>
+                        <input type="text" placeholder="Your Subject" name="Subject">
+                        <textarea name="Message" id="" cols="30" rows="10" placeholder="Your Message..." ></textarea>
                     </div>
 
                     <div class="btn-wrapper">
-                        <button class="btn btn-primary">
+                        <button class="btn btn-prim ary">
                             SEND MESSAGE
                         </button>
                     </div>
