--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             continuously upgrade my knowledge
                             and skills.</p>
                         <DIV>
-                            <a href="https://drive.google.com/file/d/1dsfFHrzHEAm0nB6Ek2a-p0NAhP30x5s_/view?usp=sharing">
+                            <a href="https://docs.google.com/document/d/1L4RHNw8igWeNpjihFZOY-n0CISr3NNEr/edit?usp=sharing&ouid=115158995902697550587&rtpof=true&sd=true">
                             <button class="btn btn-secondary">DOWNLOAD CV</button>
                             </a>
                         </DIV>
@@ -160,7 +160,7 @@
         <section id="Page" class="freelancer">
             <h1>I Am Available For Freelancer. </h1>
             <p>We provide high standard clean website for your business solutions</p>
-            <a href="https://drive.google.com/file/d/1dsfFHrzHEAm0nB6Ek2a-p0NAhP30x5s_/view?usp=sharing">
+            <a href="https://docs.google.com/document/d/1L4RHNw8igWeNpjihFZOY-n0CISr3NNEr/edit?usp=sharing&ouid=115158995902697550587&rtpof=true&sd=true">
             <button class="btn btn-primary">Download CV</button>
         </a>
         </section>
